01-Springboot-todo-postgresDB/k8s_manifests/02-todo-app-k8s-manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-todo
  labels:
    app: springboot-todo
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: 8080-http
  selector:
    app: springboot-todo
