01-Springboot-todo-postgresDB/k8s_manifests/02-todo-app-k8s-manifests/04-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: springboot-todo
spec:
  subdomain: springboot-todo
  to:
    kind: Service
    name: springboot-todo
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
